  notes located in the ARTICLES directory.

* `BV` a function, bibliography viewer, that allows the user to view their 
  bibiliographs stored in the .bib file.

* A new template `wordpress_web` has been added.

* `SC` a function to quickly generate special HTML characters.

* `RN` a function to quickly add reveal.js notes to an HTML reveal.js slide.

* `HR` and `HR2` functions for quick html hyperrefs.

* spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
  added.

* `CN` a new function that wraps text with courier new HTML a font tag for 
  supplied text.

* `WP` a convenience function for formulating Windows paths correctly.

IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected.

* `new_report` now allows global options to be set that allows numeric values to 
  be passed to the template option like speed dial. See ?new_report for more.

* The reports package now has a staticdocs generated help site: 
  http://trinker.github.io/reports/
  
* The reports package now has a related programs/packages help site: 
  http://trinker.github.io/reports/dependencies

CHANGES

* `html5` and `reveal.js` are now Deprecated.  The birth of the slidify package 
  makes maintaining these functions pointless.  These functions will be removed 
  from the reports package upon the next update.

reports 0.1.2
----------------------------------------------------------------
This is a bug fix release

BUG FIXES

* `GQ` did not handle block quotes correctly in what printed to the console.  
  This behavior has been corrected.

* `GQ`, `CA`, `LL` and `US` now parse out ligature "fi" as "fi" rather than "?".  
  Warnings were added for cases when liigatures are detected.

* Fixed the Description file for the basic_web template (missing info).

* `reveal.js` resulted in an error if a reference page was not supplied.   This 