@@ -70,9 +70,11 @@ Collate:
     'templates.R'
     'tex2docx.R'
     'update_bib.R'
-    'US.R'
     'utils.R'
     'WP.R'
     'YT.R'
     'BV.R'
     'IF.R'
+    'TB.R'
+    'EM.R'
+    'US.R'
