@@ -1,3 +1,4 @@
+export(BT)
 export(BV)
 export(CA)
 export(citeL)
@@ -6,6 +7,7 @@ export(col2hex)
 export(CW)
 export(delete)
 export(doc_temp)
+export(EM)
 export(folder)
 export(FT)
 export(GQ)
@@ -27,6 +29,7 @@ export(notes)
 export(pad)
 export(parenciteL)
 export(parenciteM)
+export(PF)
 export(posciteL)
 export(possciteL)
 export(presentation)
@@ -41,13 +44,14 @@ export(sync)
 export(sync_all)
 export(sync_img)
 export(sync_rnp)
+export(TB)
 export(templates)
 export(tex2docx)
 export(tex2html)
 export(textciteL)
 export(textciteM)
+export(UF)
 export(update_bib)
-export(US)
 export(VM)
 export(VS)
 export(WP)
