@@ -77,7 +77,8 @@ path <- "C:/Users/trinker/Desktop/reports_dev"
 path2 <- paste0(path, "/index.html")
 rdme <- "C:/Users/trinker/GitHub/reports/inst/extra_statdoc/readme.R"
 expand_statdoc(path2, readme = rdme, 
-    to.icon = c("sync_img", "sync_rnp", "sync_all", "VS", "VM", "IM2", "HR2"))
+    to.icon = c("sync_img", "sync_rnp", "sync_all", "VS", "VM", "IM2", "HR2", 
+    "BT", "PF"))
 
 #STEP 3: move to trinker.guthub
 library(reports)
@@ -115,7 +116,8 @@ path2 <- paste0(path, "/index.html")
 rdme <- "C:/Users/trinker/GitHub/reports/inst/extra_statdoc/readme.R"
 #extras <- qcv(folder, QQ)
 expand_statdoc(path2, readme = rdme, 
-    to.icon = c("sync_img", "sync_rnp", "sync_all", "VS", "VM", "IM2", "HR2"))
+    to.icon = c("sync_img", "sync_rnp", "sync_all", "VS", "VM", "IM2", "HR2", 
+    "BT", "PF"))
 
 #STEP 3: move to trinker.guthub
 library(reports)
