@@ -1,4 +1,5 @@
 \name{HR}
+\alias{BT}
 \alias{HR}
 \alias{HR2}
 \title{Convert path/url to HTML href Tag}
@@ -8,6 +9,9 @@
 
   HR2(path = "clipboard", text = NULL, new_win = TRUE,
     copy2clip = TRUE, print = FALSE)
+
+  BT(path = "clipboard", text = NULL, new_win = FALSE,
+    copy2clip = TRUE, print = FALSE)
 }
 \arguments{
   \item{path}{A character vector url/path copied to the
@@ -15,7 +19,7 @@
   that Windows users do not have to reorient slashes in
   local paths if reading from the clipboard.}
 
-  \item{text}{character vector of text to hyperref from.
+  \item{text}{A character vector of text to hyperref from.
   Defualt uses the \code{\link[base]{basename}} of the
   path.}
 
@@ -26,8 +30,8 @@
   copy the output to the clipboard.}
 
   \item{print}{logical.  If TRUE \code{\link[base]{cat}}
-  prints the output to the console.  If FALSE returns to
-  the console.}
+  prints the output to the console.  If \code{FALSE}
+  returns to the console.}
 }
 \value{
   Returns a character vector of an HTML href tag.
@@ -35,8 +39,11 @@
 \description{
   \code{HR} - Wrap a path/url to generate an HTML href tag.
 
-  \code{HR} - Convenience version of \code{HR} with new_win
-  set to \code{TRUE}.
+  \code{HR2} - Convenience version of \code{HR} with
+  \code{new_win} set to \code{TRUE}.
+
+  \code{BT} - Wrap a path/url to generate an HTML
+  hyperlinked text button tag.
 }
 \examples{
 ## HR("assets/img/fry_admin_1.mp4","new")
@@ -44,5 +51,7 @@
 HR(path="http://dl.dropbox.com/u/61803503/Likert.pdf", print = TRUE)
 HR("http://cran.r-project.org/src/contrib/reports_0.1.2.tar.gz", print = TRUE)
 HR("http://cran.r-project.org/src/contrib/reports_0.1.2.tar.gz", "click me", print = TRUE)
+HR2("https://github.com/trinker/reports", "reports", print = TRUE)
+BT("http://trinker.github.io/reports/dependencies", "Click Here!", print = TRUE)
 }
 
