@@ -55,7 +55,8 @@ MINOR FEATURES
 
 * `RN` a function to quickly add reveal.js notes to an HTML reveal.js slide.
 
-* `HR` and `HR2` functions for quick html hyperrefs.
+* `HR`, `HR2` `BT` and `EM` functions for quick html hyperrefs, button hyperrefs 
+  and email hyperrefs..
 
 * spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
   added.
@@ -84,6 +85,9 @@ CHANGES
 * `html5` and `reveal.js` are now Deprecated.  The birth of the slidify package 
   makes maintaining these functions pointless.  These functions will be removed 
   from the reports package upon the next update.
+
+* `US` has been renamed to `UF` (underscore fill) and gets a counter part `PF` 
+  (percent fill) for URL blank spaces.
 
 reports 0.1.2
 ----------------------------------------------------------------
